--- a/OCRScanReceipt.html
+++ b/OCRScanReceipt.html
@@ -85,49 +85,145 @@
       <div class="container">
 
         <div class="row gy-4">
+          <div class="col">
+            <div class="card bg-dark text-light" style="width: 800px;">
+              <img src="..." class="card-img-top d-none" id="preview" alt="Your photo comes here" width="500px" />
+              <div class="card-body">
+                <!-- <h5 class="card-title">Scanned Copy</h5> -->
+                <p class="card-text" id="hide">Your photo comes here</p>
+                <!-- <input type="text" placeholder="Enter the title"> -->
+                <!-- <button type="button" class="btn btn-primary" id="submit-btn"> -->
 
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
-                </div>
-
+                </button>
               </div>
-              <div class="swiper-pagination"></div>
             </div>
+          </div>
+          <div class="col-lg-8">
+
+            <!--<div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
+                  </div>
+
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>-->
           </div>
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>PHOTO</h3>
-              <ul>
-                <li><a class="getstarted scrollto" href="#about">Upload Your Photo</a></li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
+              <div class="col">
+                <div class="card bg-dark text-light">
+                  <div class="card-body">
+                    <h5 class="card-title">PHOTO</h5>
+                    <div class="mb-3">
+                      <label for="formFile" class="form-label">Upload your photo</label>
+                      <form action="/upload" method="post" enctype="multipart/form-data">
+                        <input type="file" name="file" id="file-input" , class="form-control">
+                        <br>
+                        <input type="submit" value="Upload Image" name="submit" class="btn btn-primary">
+                      </form>
+                      <!-- <input class="form-control" type="file" id="file-input" /> -->
+
+
+                      <br />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--
+                <ul>
+                  <li><a class="getstarted scrollto" href="#about">Upload Your Photo</a></li>
+                  <li><strong>Client</strong>: ASU Company</li>
+                  <li><strong>Project date</strong>: 01 March, 2020</li>
+                  <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                </ul>
+              </div>-->
+              <div class="portfolio-description">
+                <h2>This is an example of ocr scan</h2>
+                <p>
+                  Record the above bill amount.
+                </p>
+              </div>
             </div>
-            <div class="portfolio-description">
-              <h2>This is an example of ocr scan</h2>
-              <p>
-                Record the above bill amount.
-              </p>
-            </div>
+
           </div>
 
         </div>
 
-      </div>
+        <!--<div class="row row-cols-1 row-cols-md-4 g-5 d-flex align-items-center justify-content-center"
+          style="height: 100vh;">-->
+        <!--<div class="col">
+          <div class="card bg-dark text-light">
+            <div class="card-body">
+              <h5 class="card-title">PHOTO</h5>
+              <div class="mb-3">
+                <label for="formFile" class="form-label">Upload your photo</label>
+                <form action="/upload" method="post" enctype="multipart/form-data">
+                  <input type="file" name="file" id="file-input" , class="form-control">
+                  <br>
+                  <input type="submit" value="Upload Image" name="submit" class="btn btn-primary">
+                </form>
+                <input class="form-control" type="file" id="file-input" /> 
+
+
+                <br />
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="col">
+            <div class="card bg-dark text-light" style="width: 500px;">
+              <img src="..." class="card-img-top d-none" id="preview" alt="Your photo comes here" width="500px" />
+              <div class="card-body">
+                 <h5 class="card-title">Scanned Copy</h5> -->
+        <!--<p class="card-text" id="hide">Your photo comes here</p>-->
+        <!-- <input type="text" placeholder="Enter the title"> -->
+        <!-- <button type="button" class="btn btn-primary" id="submit-btn"> 
+
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>-->
+
+        <script>
+          let input = document.querySelector("#file-input");
+          const imgadd = document.querySelector("#preview");
+
+          //   document.querySelector("#submit-btn").addEventListener("click", () => {
+          //     input.click();
+          //   });
+
+          input.addEventListener("change", preview);
+
+          function preview() {
+            let fileObject = this.files[0];
+            let fileReader = new FileReader();
+            fileReader.readAsDataURL(fileObject);
+            fileReader.onload = function () {
+              let result = fileReader.result;
+              let img = document.querySelector("#preview");
+              img.setAttribute("src", result);
+            };
+            document.querySelector("#preview").classList.remove("d-none");
+            document.querySelector("#hide").classList.add("d-none");
+          }
+        </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+          crossorigin="anonymous"></script>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
