--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a class="nav-link scrollto " href="#services">OCR Scan Receipt</a></li>
           <li><a class="nav-link scrollto " href="#team">Our Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Sign In / Sign Up</a></li>
+          <li><a class="getstarted scrollto" href="signin.html">Sign In / Sign Up</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
