--- a/signin.html
+++ b/signin.html
@@ -20,9 +20,13 @@
                     <a href="https://www.linkedin.com/home" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>Or use your email for registration</span>
-                <input type="text" placeholder="Name" />
-                <input type="email" placeholder="Email" />
-                <input type="password" placeholder="Password" />
+                <input type="text" placeholder="Name" id="name" />
+                <input type="email" placeholder="Email" id="email" />
+                <input type="password" placeholder="Password" id="password" />
+                <script>
+                    const element = document.getElementById("name");
+                    element.value = process(rawText);
+                </script>
                 <button>Sign Up</button>
             </form>
         </div>
@@ -64,5 +68,6 @@
 
 </body>
 <script src="assets/js/signin.js"></script>
+<script src="assets/js/voiceassitant.js"></script>
 
 </html>
